@@ -92,6 +92,11 @@ EXPORT_SYMBOL long HX_time_compare(const struct stat *a,
 	if (sel == 'm')
 		return ((r = a->st_mtime - b->st_mtime) != 0) ?
 		       r : a->st_mtimensec - b->st_mtimensec;
+#ifdef HAVE_STRUCT_STAT_ST_OTIMENSEC
+	else if (sel == 'o')
+		return ((r = a->st_otime - b->st_otime) != 0) ?
+		       r : a->st_otimensec - b->st_otimensec;
+#endif
 	else if (sel == 'a')
 		return ((r = a->st_atime - b->st_atime) != 0) ?
 		       r : a->st_atimensec - b->st_atimensec;
@@ -102,6 +107,11 @@ EXPORT_SYMBOL long HX_time_compare(const struct stat *a,
 	if (sel == 'm')
 		return ((r = a->st_mtim.tv_sec - b->st_mtim.tv_sec) != 0) ?
 		       r : a->st_mtim.tv_nsec - b->st_mtim.tv_nsec;
+#ifdef HAVE_STRUCT_STAT_ST_OTIM
+	else if (sel == 'o')
+		return ((r = a->st_otim.tv_sec - b->st_otim.tv_sec) != 0) ?
+		       r : a->st_otim.tv_nsec - b->st_otim.tv_nsec;
+#endif
 	else if (sel == 'a')
 		return ((r = a->st_atim.tv_sec - b->st_atim.tv_sec) != 0) ?
 		       r : a->st_atim.tv_nsec - b->st_atim.tv_nsec;
@@ -112,6 +122,11 @@ EXPORT_SYMBOL long HX_time_compare(const struct stat *a,
 	if (sel == 'm')
 		return ((r = a->st_mtimespec.tv_sec - b->st_mtimespec.tv_sec) != 0) ?
 		       r : a->st_mtimespec.tv_nsec - b->st_mtimespec.tv_nsec;
+#ifdef HAVE_STRUCT_STAT_ST_OTIMESPEC
+	else if (sel == 'o')
+		return ((r = a->st_otimespec.tv_sec - b->st_otimespec.tv_sec) != 0) ?
+		       r : a->st_otimespec.tv_nsec - b->st_otimespec.tv_nsec;
+#endif
 	else if (sel == 'a')
 		return ((r = a->st_atimespec.tv_sec - b->st_atimespec.tv_sec) != 0) ?
 		       r : a->st_atimespec.tv_nsec - b->st_atimespec.tv_nsec;
@@ -121,6 +136,10 @@ EXPORT_SYMBOL long HX_time_compare(const struct stat *a,
 #elif defined(HAVE_STRUCT_STAT_ST_MTIME)
 	if (sel == 'm')
 		return a->st_mtime - b->st_mtime;
+#ifdef HAVE_STRUCT_STAT_ST_OTIME
+	else if (sel == 'o')
+		return a->st_otime - b->st_otime;
+#endif
 	else if (sel == 'a')
 		return a->st_atime - b->st_atime;
 	else if (sel == 'c')
